Added ul tabs-nav

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   </head>
   <body>
     <div class="tab-system">
+      <ul class="tabs-nav">
+        <li>About Us</li>
+        <li>Products &amp; Services</li>
+        <li>Local Reviews</li>
+        <li>Specials &amp; Financing</li>
+        <li>Local Photo Gallery</li>
+      </ul>
       <div class="tab">
         <p>Tab 1</p>
       </div>
