added basic tabs styling and proper html structure.

--- a/index.html
+++ b/index.html
@@ -5,40 +5,57 @@
     <script src="multiple-accordions-tabs.js"></script>
   </head>
   <body>
-    <div class="tab-system">
-      <ul class="tabs-nav">
-        <li>About Us</li>
-        <li>Products &amp; Services</li>
-        <li>Local Reviews</li>
-        <li>Specials &amp; Financing</li>
-        <li>Local Photo Gallery</li>
-      </ul>
-      <div class="tab">
-        <p>Tab 1</p>
+    <article class="tab-system">
+      <div class="tabs">
+        <ul class="tabs-nav">
+          <li>Tab 1</li>
+          <li>Tab 2</li>
+          <li>Tab 3</li>
+          <li>Tab 4</li>
+        </ul>
       </div>
-      <div class="tab">
-        <p>Tab 2</p>
+      <div class="tabs-content">
+        <div class="tabs-content-container">
+          <div class="tab">
+            <p>Tab 1</p>
+          </div>
+          <div class="tab">
+            <p>Tab 2</p>
+          </div>
+          <div class="tab">
+            <p>Tab 3</p>
+          </div>
+          <div class="tab">
+            <p>Tab 4</p>
+          </div>
+        </div>
       </div>
-      <div class="tab">
-        <p>Tab 3</p>
+    </article>
+    <article class="tab-system">
+      <div class="tabs">
+        <ul class="tabs-nav">
+          <li>Tab 1</li>
+          <li>Tab 2</li>
+          <li>Tab 3</li>
+          <li>Tab 4</li>
+        </ul>
       </div>
-      <div class="tab">
-        <p>Tab 4</p>
+      <div class="tabs-content">
+        <div class="tabs-content-container">
+          <div class="tab">
+            <p>Tab 1</p>
+          </div>
+          <div class="tab">
+            <p>Tab 2</p>
+          </div>
+          <div class="tab">
+            <p>Tab 3</p>
+          </div>
+          <div class="tab">
+            <p>Tab 4</p>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="tab-system">
-      <div class="tab">
-        <p>Tab 1</p>
-      </div>
-      <div class="tab">
-        <p>Tab 2</p>
-      </div>
-      <div class="tab">
-        <p>Tab 3</p>
-      </div>
-      <div class="tab">
-        <p>Tab 4</p>
-      </div>
-    </div>
+    </article>
   </body>
 </html>
