commented each line/block of tab js, minor updates to styling, added placeholder page content to html to ensure scrollToDiv is working.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <script src="multiple-accordions-tabs.js"></script>
   </head>
   <body>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
     <article class="tab-system">
       <div class="tabs">
         <ul class="tabs-nav">
@@ -31,6 +39,14 @@
         </div>
       </div>
     </article>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
     <article class="tab-system">
       <div class="tabs">
         <ul class="tabs-nav">
@@ -57,5 +73,21 @@
         </div>
       </div>
     </article>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
+    <p>Sample content</p>
   </body>
 </html>
