updated position of slides when effectFade is true

--- a/responsive-xml-rotators/index.html
+++ b/responsive-xml-rotators/index.html
@@ -55,6 +55,12 @@ body {
 	display: none;
 }
 
+.gallery .gallery-fade .slide {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
 .gallery .slide img {
 	opacity: 0.8;
 }
